Fix stretched images in Safari
Reported here: https://twitter.com/llanga/status/1254736269978087424

--- a/style/style.scss
+++ b/style/style.scss
@@ -859,6 +859,7 @@ div.linenodiv {
 img {
     max-width: 100%;
     height: auto;
+    align-self: flex-start; /* https://stackoverflow.com/a/61196907/14343 */
 }
 
 .tweet a {
